# codex-session-manager

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: next-version.md  release-qa.md
docs/handover/: 2026-06-19_16-37-44.md  2026-06-24_15-28-46.md  2026-06-25_08-58-23.md  2026-06-25_10-32-38.md  2026-06-29_14-39-50.md
docs/superpowers/plans/: 2026-06-19-auto-updater.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloud.rs  codex_status.rs  config.rs  debuglog.rs  environment.rs  lib.rs  main.rs  resume.rs  scanner.rs  summary.rs  terminal.rs  types.rs  update.rs
src-tauri/tests/: integration.rs
src/components/: CodexStatusPanel.tsx  DeleteConfirmDialog.tsx  SessionDetail.tsx  SessionTable.tsx  SettingsDialog.tsx
src/components/ui/: table.tsx
src/i18n/: en.json  ko.json
src/lib/: ipc.ts  sessionDisplay.ts
src/styles/: globals.css
