[package]
name = "claude-session-manager"
version = "0.4.7"
description = "Claude Code session manager (Tauri)"
authors = ["glowElephant"]
edition = "2021"
default-run = "claude-session-manager"

[lib]
name = "claude_session_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "claude-session-manager"
path = "src/main.rs"

[[bin]]
name = "session-cli"
path = "src/bin/cli.rs"
