[package]
name = "codex-session-manager"
version = "0.5.7"
description = "Codex session manager (Tauri)"
authors = ["nowJDev", "glowElephant"]
edition = "2021"
default-run = "codex-session-manager"

[lib]
name = "codex_session_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "codex-session-manager"
path = "src/main.rs"

[[bin]]
name = "session-cli"
path = "src/bin/cli.rs"
